--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head></head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Full Stack Software Developer Resume of Pavlo Myskov."
+    />
+    <meta
+      keywords="Pavlo Myskov, Full Stack Software Developer,
+       Software Developer, Web Developer, Front End Developer,
+       Back End Developer, Full Stack Developer, JavaScript Developer, Python Developer"
+    />
+    <title>Software Developer Resume - Pavlo Myskov</title>
+  </head>
   <body></body>
 </html>
