--- a/index.html
+++ b/index.html
@@ -13,7 +13,26 @@
        Software Developer, Web Developer, Front End Developer,
        Back End Developer, Full Stack Developer, JavaScript Developer, Python Developer"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
+      integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+
     <title>Software Developer Resume - Pavlo Myskov</title>
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <section></section>
+    <footer></footer>
+  </body>
 </html>
