--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
     <title>Software Developer Resume - Pavlo Myskov</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="row">
+        <a href="index.html" class="col-md-4 logo">
+          
+        <a>
+        <div class="col-md-8">
+
+        </div>
+      </div>
+    </header>
     <section></section>
     <footer></footer>
   </body>
