--- a/index.html
+++ b/index.html
@@ -20,12 +20,6 @@
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
-      integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 
     <title>Software Developer Resume - Pavlo Myskov</title>
@@ -73,5 +67,9 @@
 
     <section></section>
     <footer></footer>
+    <script
+      src="https://kit.fontawesome.com/b4aef698f5.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
