--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
+      integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 
     <title>Software Developer Resume - Pavlo Myskov</title>
@@ -40,23 +47,37 @@
             <div class="col">
               <!-- class that displays the list horizontally -->
               <ul id="nav" class="list-inline menucontainer">
-                <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
-                  <a href="#"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                <li
+                  class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem"
+                >
+                  <a href="#" class="hvr-icon-buzz-out"
+                    ><i class="fa fa-home hvr-icon" aria-hidden="true"></i
+                    ><span>Home</span></a
+                  >
                 </li>
                 <li
                   class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem"
                 >
-                  <a href="#"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                  <a href="#" class="hvr-icon-buzz-out"
+                    ><i class="fa fa-graduation-cap hvr-icon" aria-hidden="true"></i
+                    ><span>Resume</span></a
+                  >
                 </li>
                 <li
                   class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
                 >
-                  <a href="#"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
+                  <a href="#" class="hvr-icon-buzz-out"
+                    ><i class="fa fa-comment-o hvr-icon" aria-hidden="true"></i
+                    ><span>Contact</span></a
+                  >
                 </li>
                 <li
                   class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"
                 >
-                  <a href="#"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+                  <a href="#" class="hvr-icon-buzz-out"
+                    ><i class="fa fa-download hvr-icon" aria-hidden="true"></i
+                    ><span>Download</span></a
+                  >
                 </li>
               </ul>
             </div>
