--- a/index.html
+++ b/index.html
@@ -87,7 +87,20 @@
     </header>
 
     <section></section>
-    <footer></footer>
+    <footer class="container-fluid">
+      <div class="row">
+        <div class="col-sm-4">
+          <h5 class="uppercase general-sub">About</h5>
+        </div>
+        <div class="col-sm-4">
+          <h5 class="uppercase general-sub">Download</h5>
+        </div>
+        <div class="col-sm-4">
+          <h5 class="uppercase general-sub">Social</h5>
+        </div>
+      </div>
+    </footer>
+
     <script
       src="https://kit.fontawesome.com/b4aef698f5.js"
       crossorigin="anonymous"
