Add `about` content to the footer

--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
       <div class="row">
         <div class="col-sm-4">
           <h5 class="uppercase general-sub">About</h5>
+          <p class="inline-block">
+            Full Stack Software Developer
+            <br>
+            Python: Django | JS: React
+            <br>
+            HTML5 | CSS3: Bootstrap
+            <br>
+            PostgreSQL | Linux | GIT | Docker | Heroku
+          </p>
         </div>
         <div class="col-sm-4">
           <h5 class="uppercase general-sub">Download</h5>
