Add `socia` content to the footer

--- a/index.html
+++ b/index.html
@@ -114,6 +114,26 @@
         </div>
         <div class="col-sm-4">
           <h5 class="uppercase general-sub">Social</h5>
+          <ul class="list-inline social-links">
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/pavlomyskov" target="_blank">
+                <i class="fa-brands fa-facebook" aria-hidden="true"></i>
+                <span class="sr-only">Facebook</span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.linkedin.com/in/pavlo-myskov/" target="_blank">
+                <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
+                <span class="sr-only">LinkedIn</span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://github.com/FlashDrag" target="_blank">
+                <i class="fa fa-github" aria-hidden="true"></i>
+                <span class="sr-only">GitHub</span>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
