Add content to the `about me` section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
                   class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem"
                 >
                   <a href="#" class="hvr-icon-buzz-out"
-                    ><i class="fa fa-graduation-cap hvr-icon" aria-hidden="true"></i
+                    ><i
+                      class="fa fa-graduation-cap hvr-icon"
+                      aria-hidden="true"
+                    ></i
                     ><span>Resume</span></a
                   >
                 </li>
@@ -94,6 +97,72 @@
               <h3 class="section-heading uppercase">About Me</h3>
             </div>
           </div>
+          <div class="row">
+            <div class="col-11 col-sm-10 col-md-6 col-xl-4">
+              <div class="row">
+                <div class="col-2">
+                  <i
+                    class="three-reasons-icon fa fa-info-circle"
+                    aria-hidden="true"
+                  ></i>
+                </div>
+                <div class="col-10">
+                  <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                  <p>
+                    I'm a software developer with a strong background in Python
+                    and JavaScript. I prioritize creating high-quality,
+                    user-friendly, and maintainable applications.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-11 col-sm-10 col-md-6 col-xl-4">
+              <div class="row">
+                <div class="col-2">
+                  <i
+                    class="three-reasons-icon fa fa-gear"
+                    aria-hidden="true"
+                  ></i>
+                </div>
+                <div class="col-10">
+                  <h4 class="three-reasons-heading uppercase">
+                    How do I do it??
+                  </h4>
+                  <p>
+                    I use the latest technologies and development approaches,
+                    including Agile methodologies, Django Python framework for
+                    robust and scalable back-end systems and APIs, React JS
+                    library for high-quality front-end interfaces, and Bootstrap
+                    CSS framework for modern and responsive mobile-first web
+                    applications. I am also experienced in using SQL database
+                    management systems and Docker for containerization to deploy
+                    applications consistently and reliably across multiple
+                    environments.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-11 col-sm-10 col-md-6 col-xl-4">
+              <div class="row">
+                <div class="col-2">
+                  <i
+                    class="three-reasons-icon fa fa-bolt"
+                    aria-hidden="true"
+                  ></i>
+                </div>
+                <div class="col-10">
+                  <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
+                  <p>
+                    I am a fast learner and a highly motivated individual who is
+                    eager to grow professionally and become a valuable asset in
+                    the field of software/web development. I pay attention to
+                    detail and have a commitment to delivering reliable,
+                    user-friendly, and maintainable applications.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -104,18 +173,20 @@
           <h5 class="uppercase general-sub">About</h5>
           <p class="inline-block">
             Full Stack Software Developer
-            <br>
+            <br />
             Python: Django | JS: React
-            <br>
+            <br />
             HTML5 | CSS3: Bootstrap
-            <br>
+            <br />
             PostgreSQL | Linux | GIT | Docker | Heroku
           </p>
         </div>
         <div class="col-sm-4">
           <h5 class="uppercase general-sub">Download</h5>
           <p class="inline-block">
-            Need a printable version of my CV? Download it here.
+            Need a printable version of my CV?
+            <br />
+            Download it here.
             <a href="#" target="_blank" class="cv-pdf">
               <i class="fa fa-download" aria-hidden="true"></i>
               <!-- as fontawesome icon is hidden for scr readers, we add span with text for screen readers only -->
@@ -133,7 +204,10 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/pavlo-myskov/" target="_blank">
+              <a
+                href="https://www.linkedin.com/in/pavlo-myskov/"
+                target="_blank"
+              >
                 <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
                 <span class="sr-only">LinkedIn</span>
               </a>
