--- a/index.html
+++ b/index.html
@@ -90,7 +90,50 @@
     </header>
 
     <section class="container-fluid">
-      <div class="row row-table">
+      <div class="row">
+        <div class="col-md-4 bg-color-personal-info section-column">
+          <div class="row">
+            <div class="col-12">
+              <h3 class="section-heading uppercase">Personal info</h3>
+            </div>
+          </div>
+          <div class="pesonal-info-item">
+            <div class="key">
+              <p class="uppercase">
+                Name:
+              </p>
+            </div>
+            <div class="value">
+              <p>
+                Pavlo Myskov
+              </p>
+            </div>
+          </div>
+          <div class="pesonal-info-item">
+            <div class="key">
+              <p class="uppercase">
+                Address:
+              </p>
+            </div>
+            <div class="value">
+              <p>
+                co. Offaly, Ireland
+              </p>
+            </div>
+          </div>
+          <div class="pesonal-info-item">
+            <div class="key">
+              <p class="uppercase">
+                Telegram:
+              </p>
+            </div>
+            <div class="value">
+              <p>
+                @FlashDrag
+              </p>
+            </div>
+          </div>
+        </div>
         <div class="col-md-8 bg-color-three-reasons section-column">
           <div class="row">
             <div class="col">
@@ -216,6 +259,12 @@
               <a href="https://github.com/FlashDrag" target="_blank">
                 <i class="fa fa-github" aria-hidden="true"></i>
                 <span class="sr-only">GitHub</span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://t.me/flashdrag" target="_blank">
+                <i class="fa fa-telegram" aria-hidden="true"></i>
+                <span class="sr-only">Telegram</span>
               </a>
             </li>
           </ul>
