--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-11 col-sm-10 col-md-6 col-xl-4">
+            <div class="col-11 col-sm-6 col-md-11 col-lg-6">
               <div class="row">
                 <div class="col-2">
                   <i
@@ -159,7 +159,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-11 col-sm-10 col-md-6 col-xl-4">
+            <div class="col-11 col-sm-6 col-md-11 col-lg-6 white-space">
               <div class="row">
                 <div class="col-2">
                   <i
@@ -169,7 +169,7 @@
                 </div>
                 <div class="col-10">
                   <h4 class="three-reasons-heading uppercase">
-                    How do I do it??
+                    How do I do it?
                   </h4>
                   <p>
                     I use the latest technologies and development approaches,
@@ -185,7 +185,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-11 col-sm-10 col-md-6 col-xl-4">
+            <div class="col-11 col-sm-6 col-md-11 col-lg-6">
               <div class="row">
                 <div class="col-2">
                   <i
