Change logo image, fix position

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     <header>
       <!-- no-gutters removes the default 15px padding for the row -->
       <div class="row no-gutters">
-        <a href="index.html" class="col-md-4 logo"></a>
+        <div class="col-md-4 logo-wrapper">
+          <a href="index.html" class="logo"></a>
+        </div>
         <div class="col-md-8">
           <div class="row no-gutters bg-color-name-title">
             <div class="col heading">
