--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-icon-buzz-out"
+                  <a href="index.html" class="hvr-icon-buzz-out"
                     ><i class="fa fa-home hvr-icon" aria-hidden="true"></i
-                    ><span>Home</span></a
+                    ><span class="border-bottom">Home</span></a
                   >
                 </li>
                 <li
                   class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-icon-buzz-out"
+                  <a href="resume.html" class="hvr-icon-buzz-out"
                     ><i
                       class="fa fa-graduation-cap hvr-icon"
                       aria-hidden="true"
@@ -71,7 +71,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-icon-buzz-out"
+                  <a href="contact.html" class="hvr-icon-buzz-out"
                     ><i class="fa fa-comment-o hvr-icon" aria-hidden="true"></i
                     ><span>Contact</span></a
                   >
