Add progress section

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                   <p>
                     I use the latest technologies and development approaches,
                     including Agile methodologies, Django Python framework for
-                    robust and scalable back-end systems and APIs, React JS
+                    robust and scalable back-end systems and APIs, Vue JS
                     library for high-quality front-end interfaces, and Bootstrap
                     CSS framework for modern and responsive mobile-first web
                     applications. I am also experienced in using SQL database
@@ -219,7 +219,7 @@
           <p class="inline-block">
             Full Stack Software Developer
             <br />
-            Python: Django | JS: React
+            Python: Django | JS: Vue.js
             <br />
             HTML5 | CSS3: Bootstrap
             <br />
