--- a/resume.html
+++ b/resume.html
@@ -144,6 +144,40 @@
               </div>
             </div>
           </div>
+          <div class="row progress-section">
+            <div class="col">
+              <div class="progress">
+                <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%">
+                  <span class="sr-only">85% Complete</span>
+                  <span class="text-left pl-2 progress-item">HTML / HTML5</span>
+                </div>
+              </div>
+              <div class="progress">
+                <div class="progress-bar bg-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+                  <span class="sr-only">70% Complete</span>
+                  <span class="text-left pl-2 progress-item">CSS / CSS3 / Bootstrap</span>
+                </div>
+              </div>
+              <div class="progress">
+                <div class="progress-bar bg-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                  <span class="sr-only">60% Complete</span>
+                  <span class="text-left pl-2 progress-item">Java Script / Vue.js</span>
+                </div>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                  <span class="sr-only">80% Complete</span>
+                  <span class="text-left pl-2 progress-item">Python / Django</span>
+                </div>
+              </div>
+              <div class="progress">
+                <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+                  <span class="sr-only">50% Complete</span>
+                  <span class="text-left pl-2 progress-item">SQL / NoSQL</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -155,7 +189,7 @@
           <p class="inline-block">
             Full Stack Software Developer
             <br />
-            Python: Django | JS: React
+            Python: Django | JS: Vue.js
             <br />
             HTML5 | CSS3: Bootstrap
             <br />
