Add content to `My skills` ыусешщт

--- a/resume.html
+++ b/resume.html
@@ -119,9 +119,13 @@
                   <h4 class="three-reasons-heading uppercase">
                     Front End
                   </h4>
-                  <p>
-                    ...
-                  </p>
+                  <ul class="p-0">
+                    <li>Skilled in applying user-centered design principles to create high-quality front-end interfaces with a focus on usability and UX (user experience).</li>
+                    <li>Strong understanding of HTML, CSS, and JavaScript, and ability to write clean and maintainable code.</li>
+                    <li>Skilled in developing responsive and accessible web applications using Bootstrap CSS framework.</li>
+                    <li>Proficient in building dynamic and interactive user interfaces using Vue JS framework.</li>
+                    <li>Knowledgeable in implementing client-side validation and form handling using JavaScript techniques.</li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -137,9 +141,13 @@
                   <h4 class="three-reasons-heading uppercase">
                     Back End
                   </h4>
-                  <p>
-                    ...
-                  </p>
+                  <ul class="p-0">
+                    <li>Proficient in developing robust and scalable back-end systems and RESTful APIs using Django Python framework.</li>
+                    <li>Experienced in implementing data validation and verification techniques with Pydantic to ensure data accuracy, consistency, and integrity.</li>
+                    <li>Skilled in working with SQL database management systems for efficient data storage and retrieval.</li>
+                    <li>Skilled in developing and executing automated tests for back-end systems and APIs using testing frameworks such as Pytest and Unittest.</li>
+                    <li>Experienced in deploying applications using containerization technology such as Docker to ensure consistent and reliable deployment across multiple environments.</li>
+                  </ul>
                 </div>
               </div>
             </div>
