--- a/resume.html
+++ b/resume.html
@@ -93,10 +93,36 @@
 
     <section class="container-fluid">
       <div class="row">
-        <div class="col-md-4 bg-color-personal-info section-column">
+        <div class="col-md-4 bg-color-work-history section-column">
           <div class="row">
             <div class="col-12">
-              <h3 class="section-heading uppercase">Work History</h3>
+              <h3 class="history-heading uppercase">Work History</h3>
+            </div>
+          </div>
+          <div class="history-items">
+            <div class="timeline-item" data-dates="10/2022 - current">
+              <h4>Code Institute</h4>
+              <p>Student, Full Stack Softaware Developer</p>
+            </div>
+            <div class="timeline-item" data-dates="10/2019 - 05/2022">
+              <h4>Dawn Meats</h4>
+              <p>General operative</p>
+            </div>
+            <div class="timeline-item" data-dates="2016 - 2019">
+              <h4>German, Sweden</h4>
+              <p>Agricultural apprenticeships</p>
+            </div>
+            <div class="timeline-item" data-dates="2015 - 2016">
+              <h4>Koshyk</h4>
+              <p>Operator 1C Enterprise</p>
+            </div>
+            <div class="timeline-item" data-dates="2011 - 2015">
+              <h4>T.B. Fruit</h4>
+              <p>Evaporator operator</p>
+            </div>
+            <div class="timeline-item" data-dates="2007 - 2011">
+              <h4>Kamyanets-Podilsky Ivan Ohienko National University</h4>
+              <p>Student, Bachelor of History</p>
             </div>
           </div>
         </div>
@@ -110,21 +136,32 @@
             <div class="col-11 col-sm-6 col-md-11 col-lg-6">
               <div class="row">
                 <div class="col-2">
-                  <i
-                    class="three-reasons-icon fa fa-tv"
-                    aria-hidden="true"
-                  ></i>
+                  <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
                 </div>
                 <div class="col-10">
-                  <h4 class="three-reasons-heading uppercase">
-                    Front End
-                  </h4>
+                  <h4 class="three-reasons-heading uppercase">Front End</h4>
                   <ul class="p-0">
-                    <li>Skilled in applying user-centered design principles to create high-quality front-end interfaces with a focus on usability and UX (user experience).</li>
-                    <li>Strong understanding of HTML, CSS, and JavaScript, and ability to write clean and maintainable code.</li>
-                    <li>Skilled in developing responsive and accessible web applications using Bootstrap CSS framework.</li>
-                    <li>Proficient in building dynamic and interactive user interfaces using Vue JS framework.</li>
-                    <li>Knowledgeable in implementing client-side validation and form handling using JavaScript techniques.</li>
+                    <li>
+                      Skilled in applying user-centered design principles to
+                      create high-quality front-end interfaces with a focus on
+                      usability and UX (user experience).
+                    </li>
+                    <li>
+                      Strong understanding of HTML, CSS, and JavaScript, and
+                      ability to write clean and maintainable code.
+                    </li>
+                    <li>
+                      Skilled in developing responsive and accessible web
+                      applications using Bootstrap CSS framework.
+                    </li>
+                    <li>
+                      Proficient in building dynamic and interactive user
+                      interfaces using Vue JS framework.
+                    </li>
+                    <li>
+                      Knowledgeable in implementing client-side validation and
+                      form handling using JavaScript techniques.
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -138,15 +175,32 @@
                   ></i>
                 </div>
                 <div class="col-10">
-                  <h4 class="three-reasons-heading uppercase">
-                    Back End
-                  </h4>
+                  <h4 class="three-reasons-heading uppercase">Back End</h4>
                   <ul class="p-0">
-                    <li>Proficient in developing robust and scalable back-end systems and RESTful APIs using Django Python framework.</li>
-                    <li>Experienced in implementing data validation and verification techniques with Pydantic to ensure data accuracy, consistency, and integrity.</li>
-                    <li>Skilled in working with SQL database management systems for efficient data storage and retrieval.</li>
-                    <li>Skilled in developing and executing automated tests for back-end systems and APIs using testing frameworks such as Pytest and Unittest.</li>
-                    <li>Experienced in deploying applications using containerization technology such as Docker to ensure consistent and reliable deployment across multiple environments.</li>
+                    <li>
+                      Proficient in developing robust and scalable back-end
+                      systems and RESTful APIs using Django Python framework.
+                    </li>
+                    <li>
+                      Experienced in implementing data validation and
+                      verification techniques with Pydantic to ensure data
+                      accuracy, consistency, and integrity.
+                    </li>
+                    <li>
+                      Skilled in working with SQL database management systems
+                      for efficient data storage and retrieval.
+                    </li>
+                    <li>
+                      Skilled in developing and executing automated tests for
+                      back-end systems and APIs using testing frameworks such as
+                      Pytest and Unittest.
+                    </li>
+                    <li>
+                      Experienced in deploying applications using
+                      containerization technology such as Docker to ensure
+                      consistent and reliable deployment across multiple
+                      environments.
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -155,31 +209,72 @@
           <div class="row progress-section">
             <div class="col">
               <div class="progress">
-                <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%">
+                <div
+                  class="progress-bar bg-danger"
+                  role="progressbar"
+                  aria-valuenow="85"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 85%"
+                >
                   <span class="sr-only">85% Complete</span>
                   <span class="text-left pl-2 progress-item">HTML / HTML5</span>
                 </div>
               </div>
               <div class="progress">
-                <div class="progress-bar bg-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+                <div
+                  class="progress-bar bg-success"
+                  role="progressbar"
+                  aria-valuenow="70"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 70%"
+                >
                   <span class="sr-only">70% Complete</span>
-                  <span class="text-left pl-2 progress-item">CSS / CSS3 / Bootstrap</span>
+                  <span class="text-left pl-2 progress-item"
+                    >CSS / CSS3 / Bootstrap</span
+                  >
                 </div>
               </div>
               <div class="progress">
-                <div class="progress-bar bg-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                <div
+                  class="progress-bar bg-info"
+                  role="progressbar"
+                  aria-valuenow="60"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 60%"
+                >
                   <span class="sr-only">60% Complete</span>
-                  <span class="text-left pl-2 progress-item">Java Script / Vue.js</span>
+                  <span class="text-left pl-2 progress-item"
+                    >Java Script / Vue.js</span
+                  >
                 </div>
               </div>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                <div
+                  class="progress-bar"
+                  role="progressbar"
+                  aria-valuenow="80"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 80%"
+                >
                   <span class="sr-only">80% Complete</span>
-                  <span class="text-left pl-2 progress-item">Python / Django</span>
+                  <span class="text-left pl-2 progress-item"
+                    >Python / Django</span
+                  >
                 </div>
               </div>
               <div class="progress">
-                <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+                <div
+                  class="progress-bar bg-warning"
+                  role="progressbar"
+                  aria-valuenow="50"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 50%"
+                >
                   <span class="sr-only">50% Complete</span>
                   <span class="text-left pl-2 progress-item">SQL / NoSQL</span>
                 </div>
