Fix: typos, form input margins

--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
       <div class="row bg-color-contact">
         <div class="col">
           <h3 class="contact-heading uppercase text-center mt-4 mb-3">
-            Goa a project in mind?
+            Got a project in mind?
           </h3>
           <h5 class="uppercase text-center">Let's work together</h5>
           <div class="form-row">
@@ -107,7 +107,7 @@
                   type="text"
                   name="name"
                   id="fullname"
-                  class="form-control"
+                  class="form-control mb-1"
                   placeholder="Name"
                   required
                 />
@@ -115,7 +115,7 @@
                   type="email"
                   name="email"
                   id="emailaddress"
-                  class="form-control"
+                  class="form-control mb-1"
                   placeholder="Email"
                   required
                 />
