--- a/resume.html
+++ b/resume.html
@@ -102,7 +102,7 @@
           <div class="history-items">
             <div class="timeline-item" data-dates="10/2022 - current">
               <h4>Code Institute</h4>
-              <p>Student, Full Stack Softaware Developer</p>
+              <p>Student, Full Stack Software Developer</p>
             </div>
             <div class="timeline-item" data-dates="10/2019 - 05/2022">
               <h4>Dawn Meats</h4>
