--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-icon-buzz-out"
+                  <a href="assets/cv/cv.pdf" target="_blank" class="hvr-icon-buzz-out"
                     ><i class="fa fa-download hvr-icon" aria-hidden="true"></i
                     ><span>Download</span></a
                   >
@@ -232,7 +232,7 @@
             Need a printable version of my CV?
             <br />
             Download it here.
-            <a href="#" target="_blank" class="cv-pdf">
+            <a href="assets/cv/cv.pdf" target="_blank" class="cv-pdf">
               <i class="fa fa-download" aria-hidden="true"></i>
               <!-- as fontawesome icon is hidden for scr readers, we add span with text for screen readers only -->
               <span class="sr-only">Download link</span>
