Add github and interests boilerplates

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
               <!-- class that displays the list horizontally -->
               <ul id="nav" class="list-inline menucontainer">
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem"
+                  class="col-6 col-sm-2 ui-menu-color-home list-inline-item menuitem"
                 >
                   <a href="index.html" class="hvr-icon-buzz-out"
                     ><i class="fa fa-home hvr-icon" aria-hidden="true"></i
@@ -58,7 +58,7 @@
                   >
                 </li>
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem"
+                  class="col-6 col-sm-2 ui-menu-color-resume list-inline-item menuitem"
                 >
                   <a href="resume.html" class="hvr-icon-buzz-out"
                     ><i
@@ -69,7 +69,7 @@
                   >
                 </li>
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
+                  class="col-6 col-sm-2 ui-menu-color-contact list-inline-item menuitem"
                 >
                   <a href="contact.html" class="hvr-icon-buzz-out"
                     ><i class="fa fa-comment-o hvr-icon" aria-hidden="true"></i
@@ -77,11 +77,27 @@
                   >
                 </li>
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"
+                  class="col-6 col-sm-2 ui-menu-color-interests list-inline-item menuitem"
+                >
+                  <a href="interests.html" class="hvr-icon-buzz-out"
+                    ><i class="fa fa-users hvr-icon" aria-hidden="true"></i
+                    ><span>Interests</span></a
+                  >
+                </li>
+                <li
+                  class="col-6 col-sm-2 ui-menu-color-github list-inline-item menuitem"
+                >
+                  <a href="github.html" class="hvr-icon-buzz-out"
+                    ><i class="fa fa-github hvr-icon" aria-hidden="true"></i
+                    ><span>GitHub</span></a
+                  >
+                </li>
+                <li
+                  class="col-6 col-sm-2 ui-menu-color-download list-inline-item menuitem"
                 >
                   <a href="assets/cv/cv.pdf" target="_blank" class="hvr-icon-buzz-out"
                     ><i class="fa fa-download hvr-icon" aria-hidden="true"></i
-                    ><span>Download</span></a
+                    ><span>Download CV</span></a
                   >
                 </li>
               </ul>
@@ -100,7 +116,7 @@
           <h5 class="uppercase text-center">Let's work together</h5>
           <div class="form-row">
             <div
-              class="col-10 offset-1 col-md-8 offset-md-2 center-form pt-2 pt-md-3 my-0 mx-auto"
+              class="col-10 col-md-8 col-lg-6 center-form pt-2 pt-md-3 my-0 mx-auto"
             >
               <form>
                 <input
@@ -149,7 +165,7 @@
           <p class="inline-block">
             Full Stack Software Developer
             <br />
-            Python: Django | JS: Vue.js
+            Python: Django | JS: Vue.js, jQuery
             <br />
             HTML5 | CSS3: Bootstrap
             <br />
