--- a/interests.html
+++ b/interests.html
@@ -278,11 +278,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-    <script
-      async
-      defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"
-    ></script>
+    <!-- put your api key -->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=<YOUR_API_KEY>&callback=initMap"></script>
     <script src="assets/js/maps.js"></script>
   </body>
 </html>
